# swr

./: Cargo.toml  LICENSE  README.md
crates/core/: Cargo.toml
crates/core/src/: buffer.rs  clip.rs  frame.rs  lib.rs
crates/window/: Cargo.toml
crates/window/src/: app.rs  config.rs  error.rs  lib.rs  run.rs  state.rs
examples/: hello_window.rs
src/: lib.rs  prelude.rs
